fixed list spacing issues

--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@ body {
 /*https://stackoverflow.com/questions/7896402/how-can-i-replace-text-with-css*/
 .token.list {
   display: inline-block;
-  width: 1.5em;
-  margin-left: 2.1em;
+  width: 1.45em;
+  margin-left: 2.05em;
   position: relative;
   color: transparent;
 }
@@ -134,6 +134,12 @@ body {
 }
 .token.checkbox {
   font-family: monospace;
+}
+.token.checkbox input[type='checkbox'] {
+  display: inline-block;
+  height: 1em;
+  margin-left: 3.25em;
+  margin-right: 1.25em;
 }
 
 .token.hr {
@@ -204,7 +210,7 @@ body {
 
 .tab {
   display: inline-block;
-  width: 2em;
+  width: 1.95em;
 }
 
 @media print {
